tests/compile_fail/max_timers_zero.c
#define MTIMER_MAX_TIMERS 0
#include "../../include/mtimer_config.h"

int main(void)
{
    return 0;
}
